--- a/index.html
+++ b/index.html
@@ -55,36 +55,64 @@
 
 
     <div class="wrapper container-site">
-        <div>
-            <div style="position:fixed; top: calc(50% - (72px / 2)); right:-15px" class="rotate-90"><a href="javascript:;">LIVE CHAT</a></div>
-            <div style="position:fixed; top: calc(50% - (145px / 2)) ; left:-51px" class="rotate-reverse-90"><a href="javascript:;">CARDHOLDER LOGIN</a></div>
+        <!--<div>-->
+            <!--<div style="position:fixed; top: calc(50% - (72px / 2)); right:-15px" class="rotate-90"><a href="javascript:;">LIVE CHAT</a></div>-->
+            <!--<div style="position:fixed; top: calc(50% - (145px / 2)) ; left:-51px" class="rotate-reverse-90"><a href="javascript:;">CARDHOLDER LOGIN</a></div>-->
+        <!--</div>-->
+        <div style="position: sticky; top:50%;">
+            <div style="position:absolute;  right:-50px" class="rotate-90"><a href="javascript:;">LIVE CHAT</a></div>
+            <div style="position:absolute;  left:-90px" class="rotate-reverse-90"><a href="javascript:;">CARDHOLDER LOGIN</a></div>
         </div>
         <div class="">
             <div class="ibox float-e-margins" >
                 <div class="ibox-content">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <nav id="project01" class="project navbar navbar-default navbar-fixed-top bg-white border-white">
-                                <nav class="head">
-                                    <div class="headerLogo">
-                                        <img src="./img/sentient-jet-logot1.png" alt="">
-                                    </div>
-                                    <div class="row innner_head">
-                                        <div class="col-lg-6 col-xs-6  text-right">
-                                            <div style="display:inline-block" class="header-left-title">
-                                                <button type="button" class="btn btn-w-m btn-link text-uppercase">Why sentient</button><button class="btn btn-w-m btn-link text-uppercase">How it works</button>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-6 col-md-6 col-xs-6 text-left">
-                                            <div style="display:inline-block" class="header-right-title">
-                                                <button class="btn btn-w-m btn-link text-uppercase">Safety</button><button class="btn btn-w-m btn-link text-uppercase">Sentient life</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </nav>
-                            </nav>
+                    <!--<div class="row">-->
+                        <!--<div class="col-lg-12">-->
+                            <!--<nav id="project01" class="project navbar navbar-default navbar-fixed-top bg-white border-white">-->
+                                <!--<nav class="head">-->
+                                    <!--<div class="headerLogo">-->
+                                        <!--<img src="./img/sentient-jet-logot1.png" alt="">-->
+                                    <!--</div>-->
+                                    <!--<div class="row innner_head">-->
+                                        <!--<div class="col-lg-6 col-xs-6  text-right">-->
+                                            <!--<div style="display:inline-block" class="header-left-title">-->
+                                                <!--<button type="button" class="btn btn-w-m btn-link text-uppercase">Why sentient</button><button class="btn btn-w-m btn-link text-uppercase">How it works</button>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                        <!--<div class="col-lg-6 col-md-6 col-xs-6 text-left">-->
+                                            <!--<div style="display:inline-block" class="header-right-title">-->
+                                                <!--<button class="btn btn-w-m btn-link text-uppercase">Safety</button><button class="btn btn-w-m btn-link text-uppercase">Sentient life</button>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</nav>-->
+                            <!--</nav>-->
+                        <!--</div>-->
+                      <!--</div>-->
+                    <nav style="position: sticky;top: 0; z-index: 99999999999999999;  background: white">
+                        <nav id="project01" class="project navbar-default bg-white border-white">
+                        <nav class="head">
+                        <div class="headerLogo">
+                        <img src="./img/sentient-jet-logot1.png" alt="">
                         </div>
-                      </div>
+                        <div class="row innner_head">
+                        <div class="col-lg-6 col-xs-6  text-right">
+                        <div style="display:inline-block" class="header-left-title">
+                        <button type="button" class="btn btn-w-m btn-link text-uppercase">Why sentient</button><button class="btn btn-w-m btn-link text-uppercase">How it works</button>
+                        </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-xs-6 text-left">
+                        <div style="display:inline-block" class="header-right-title">
+                        <button class="btn btn-w-m btn-link text-uppercase">Safety</button><button class="btn btn-w-m btn-link text-uppercase">Sentient life</button>
+                        </div>
+                        </div>
+                            <div class="head" style="position: sticky">
+                                <h2 style="position: absolute;top: 50vh;left: 495px"><span class="title" style="color:white">SENTIENT JET</span></h2>
+                            </div>
+                        </div>
+                        </nav>
+                        </nav>
+                    </nav>
                       <div class="row">
                         <div class="col-lg-12 ">
                             <div id="project02" class="project" class="parallaxParent">
@@ -92,9 +120,7 @@
                                 </div>
                                 <div id="parallax1" class="parallaxParent">
                                     <div style="background-image: url(./img/privatejet.jpg);">
-                                        <div class="head">
-                                        <h2><span class="title" style="color:white">SENTIENT JET</span></h2>
-                                        </div>
+
                                     </div>
                                 </div>
 
@@ -180,7 +206,7 @@
                             </div>
                         </div>
                     </div>
-                            <nav class="footer navbar navbar-default navbar-fixed-bottom bg-white border-white font-size-9">
+                            <nav style="position: sticky; bottom:0" class="footer-site navbar navbar-default navbar-fixed-bottom bg-white border-white font-size-9">
                                     <div class="container-site">
                                         <div class="col-lg-12">
                                             <ul class="nav navbar-nav">
@@ -200,7 +226,7 @@
 
                                                 </li>
                                             </ul>
-                                            <button class="btn btn-success pull-right get-in-touch" style="margin-right:25px">GET IN TOUCH</button>
+                                            <button class="btn btn-success pull-right get-in-touch" style="margin-right:64px">GET IN TOUCH</button>
                                         </div>
 
                                     </div>
